fix: Update loading animation colors for better visibility

--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -72,13 +72,13 @@
 
     @keyframes loading {
         0% {
-            background-image: linear-gradient(270deg, transparent, #aaa, transparent);
+            background-image: linear-gradient(270deg, transparent, #dddddd80, transparent);
             background-size: 400% 400%;
             background-position: 0% 50%;
         }
 
         100% {
-            background-image: linear-gradient(270deg, transparent, #aaa, transparent);
+            background-image: linear-gradient(270deg, transparent, #dddddd80, transparent);
             background-size: 400% 400%;
             background-position: -400% 50%;
         }
